--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,38 +10,13 @@
     "import imp\n",
     "import pandas as pd\n",
     "\n",
-    "#from variaveis.dictonary import var_dict_aluno,var_dict_nota\n",
+    "from variaveis.dicionarios import var_dict_aluno,var_dict_nota\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_dict_aluno = {\"aluno1\":\"Gabriel\",\n",
-    "            \"aluno2\":\"Lucas\",\n",
-    "            \"aluno3\":\"Freitinhas\",\n",
-    "            \"aluno4\":\"Miguelzim\",\n",
-    "            \"aluno5\":\"Duduzim\",\n",
-    "            \"aluno6\":\"Panqueca\",\n",
-    "    \n",
-    "            }\n",
-    "\n",
-    "var_dict_nota = {\"aluno1\":10,\n",
-    "            \"aluno2\":10,\n",
-    "            \"aluno3\":9,\n",
-    "            \"aluno4\":5,\n",
-    "            \"aluno5\":6,\n",
-    "            \"aluno6\":8,\n",
-    "    \n",
-    "            }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -49,18 +24,22 @@
      "output_type": "stream",
      "text": [
       "Gabriel\n",
-      "Lucas\n"
+      "Lucas\n",
+      "Freitinhas\n",
+      "Miguelzim\n",
+      "Duduzim\n",
+      "Panqueca\n"
      ]
     }
    ],
    "source": [
-    "for item in vd.var_dict.keys() :\n",
-    "    print(vd.var_dict[item])"
+    "for item in var_dict_aluno.keys() :\n",
+    "    print(var_dict_aluno[item])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +49,7 @@
        " 'notas': dict_values([10, 10, 9, 5, 6, 8])}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +134,7 @@
        "5    Panqueca      8"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
